--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,7 @@
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="room_number" name="room_number" placeholder="Room-Number (例:R34)" type="text">
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="room_number" name="room_number" placeholder="Room-Number (例:R34)" type="text">
         </div>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
@@ -20,6 +20,6 @@
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id ="confirmation" name ="confirmation" placeholder="Password(again)" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">登録</button>
+        <button class="btn btn-primary" type="submit">Register</button>
     </form>
 {% endblock %}
