--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,13 +46,13 @@
             </div>
         </nav>
 
-        <!-- {% if get_flashed_messages() %}
+        {% if get_flashed_messages() %}
             <header>
                 <div class="alert alert-primary mb-0 text-center" role="alert">
                     {{ get_flashed_messages() | join(" ") }}
                 </div>
             </header>
-        {% endif %} -->
+        {% endif %}
 
         <main class="container-fluid py-5 text-center">
             {% block main %}{% endblock %}
