--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
-                    {% if session["user_id"] %}
+                    {% if current_user.is_authenticated %}
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/sell">出品</a></li>
                             <li class="nav-item"><a class="nav-link" href="/edit">編集</a></li>
