--- a/templates/sell.html
+++ b/templates/sell.html
@@ -6,5 +6,18 @@
 
 {% block main %}
     <div class="h1 pb-2 mb-4 text-danger border-bottom border-danger">出品画面</div>
-    
+    <form action="/sell" method="post">
+            <label for="formFileLg" class="form-label">画像</label>
+            <input autofocus class="form-control mx-auto w-auto" id="image" name="image" type="file">
+        </div>
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">商品名</label>
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="title" name="title" placeholder="[新品] コップ" type="text">
+        </div>
+        <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">商品の説明</label>
+            <textarea autocomplete="off"  class="form-control mx-auto w-auto" id="body" name="body" type="text"  rows="5"></textarea>
+        </div>
+        <button class="btn btn-primary" type="submit">出品する!</button>
+    </form>
 {% endblock %}        
