--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,20 +5,27 @@
 {% endblock %}
 
 {% block main %}
-    <div class="h1 pb-2 mb-4 text-danger border-bottom border-danger">編集画面</div>
+    <div class="h1 pb-2 mb-4 text-danger border-bottom border-danger">モノの一覧</div>
     <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col">
-            <div class="card text-bg-light border-dark h-100" style="width: 26rem;">
-                <img src="/static/images/test_image.jpg" class="card-img-top" alt="Image">
-                <div class="card-body text-dark">
-                    <div class="h5"card-title">Card title</div>
-                    <div class="h6 card-subtitle">from: sosuke R34</div>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <small>登録日</small>
+        {% for product in products %}
+            <div class="col">
+                <div class="card text-bg-light border-dark h-100" style="width: 22rem;">
+                    <img src="data:image/jpeg;base64,{{ image_file_to_base64(product['picture_path']) }}" alt="Image" width="100%" height="100%">
+                    <div class="card-body text-dark">
+                        <div class="h5"card-title">出品者: {{ current_user.name }} ({{ current_user.room_number }})</div>
+                        <div class="h6 card-subtitle"></div>
+                        <p class="card-text">{{ product['body'] }}</p>
+                    </div>
+                    <div class="card-footer">
+                        <small>投稿日: {{ product['date'] }}</small>
+                    </div>
                 </div>
             </div>
-        </div> 
+        {% endfor %}
     </div>
 {% endblock %}        
+
+<!-- <form action="/login" method="post">
+    
+    <button class="btn btn-danger" type="submit">削除</button>
+</form> -->
