--- a/templates/edit.html
+++ b/templates/edit.html
@@ -9,11 +9,11 @@
     <div class="row row-cols-1 row-cols-md-4 g-4">
         {% for product in products %}
             <div class="col">
-                <div class="card text-bg-light border-dark h-100" style="width: 22rem;">
-                    <img src="data:image/jpeg;base64,{{ image_file_to_base64(product['picture_path']) }}" alt="Image" width="100%" height="100%">
+                <div class="card text-bg-light border-dark h-100" name="delete" style="width: 22rem;">
+                    <img src="data:image/jpeg;base64,{{ image_file_to_base64(product['picture_path']) }}" alt="Image" width="100%" height="300px">
                     <div class="card-body text-dark">
-                        <div class="h5"card-title">出品者: {{ current_user.name }} ({{ current_user.room_number }})</div>
-                        <div class="h6 card-subtitle"></div>
+                        <div class="h5"card-title>商品名: {{ product['title'] }}</div>
+                        <div class="h6 card-subtitle">by: {{ current_user.name }} ({{ current_user.room_number }})</div>
                         <p class="card-text">{{ product['body'] }}</p>
                     </div>
                     <div class="card-footer">
@@ -23,9 +23,11 @@
             </div>
         {% endfor %}
     </div>
-{% endblock %}        
-
-<!-- <form action="/login" method="post">
-    
-    <button class="btn btn-danger" type="submit">削除</button>
-</form> -->
+    <form action="/edit" method="post">
+        <div class="mb-3">
+            <label for="title" class="form-label">取り消したい商品名を入力してね!</label>
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="title" name="title" placeholder="商品名" type="text">
+        </div>
+        <button class="btn btn-danger" type="submit">削除</button>
+    </form>
+{% endblock %}
