--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,10 @@
         {% for product in products %}
             <div class="col">
                 <div class="card text-bg-light border-dark h-100" style="width: 22rem;">
-                    <img src="data:image/jpeg;base64,{{ image_file_to_base64(product['picture_path']) }}" alt="Image" width="100%" height="100%">
+                    <img src="data:image/jpeg;base64,{{ image_file_to_base64(product['picture_path']) }}" alt="Image" width="100%" height="300px">
                     <div class="card-body text-dark">
-                        <div class="h5"card-title">出品者: {{ search_user(product['user_id']).name }} ({{ search_user(product['user_id']).room_number }})</div>
-                        <div class="h6 card-subtitle"></div>
+                        <div class="h5"card-title>商品名: {{ product['title'] }}</div>
+                        <div class="h6 card-subtitle">by: {{ search_user(product['user_id']).name }} ({{ search_user(product['user_id']).room_number }})</div>
                         <p class="card-text">{{ product['body'] }}</p>
                     </div>
                     <div class="card-footer">
