--- a/templates/register.html
+++ b/templates/register.html
@@ -22,4 +22,5 @@
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
+    <p>Plaza Marketのルール</p>
 {% endblock %}
