--- a/templates/sell.html
+++ b/templates/sell.html
@@ -38,11 +38,11 @@
 
         <div class="mb-3">
             <label for="title" class="form-label">商品名</label>
-            <input autocomplete="off" class="form-control mx-auto w-auto" id="title" name="title" placeholder="[新品] コップ" type="text">
+            <input autocomplete="off" class="form-control mx-auto w-auto" id="title" name="title" placeholder="例: [新品] コップ" type="text">
         </div>
         <div class="mb-3">
             <label for="body" class="form-label">商品の説明</label>
-            <textarea autocomplete="off"  class="form-control mx-auto w-auto" id="body" name="body" type="text" rows="5"></textarea>
+            <textarea autocomplete="off"  class="form-control mx-auto w-auto" id="body" name="body" type="text" rows="5" placeholder="商品の状態/使用期間/補足事項など...."></textarea>
         </div>
         <button class="btn btn-primary" type="submit">出品する!</button>
     </form>
