--- a/templates/register.html
+++ b/templates/register.html
@@ -22,5 +22,10 @@
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
-    <p>Plaza Marketのルール</p>
+    <br>
+    <div class="text-danger">
+        <h5>&lt;Plaza Marketのルール&gt;</h5>
+        <p>・全ての商品は無料で引き継ぐこと</p>
+        <p>・複数人のリクエストがあった場合は出品者の判別に従う</p>
+    </div>
 {% endblock %}
